@@ -1,10 +1,11 @@
 2008-10-24 TualatriX <tualatrix@gmail.com>
 	
-	* media/admin.py, views.py, __init__.py, utils.py, models.py: Added
+	* media/views.py, __init__.py, utils.py, models.py: Added
 	the Media model to store upload media.
 	* pulog/static/upload
 	pulog/static/upload/thumb: Added two folders to store the upload
 	media.
+	* pulog/admin.py, media.py: Make the admin together.
 
 2008-10-23 TualatriX <tualatrix@gmail.com>
 	
